Woman's day commit

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
   <!--=========================   UNICONS  ==============================-->
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+  <!--========================= FAVICON ====================-->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
   <title>Portafolio - Pablo Alvarado</title>
 </head>
 <body>
